--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,5 +95,8 @@ dependencies {
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.15.0'
 
+    //gson 라이브러리
+    implementation 'com.google.code.gson:gson:2.9.0'
+
 
 }
