ec2 계정 옮기고, 서버 연결 재 설정 함, 그리고 포폴을 위해 디자인 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.test_retrofit">
+    package="com.example.test_retrofit" >
 
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 읽기 쓰기 권한 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -21,11 +21,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test_retrofit"
         android:usesCleartextTraffic="true"
-        android:windowSoftInputMode="adjustResize">
+        android:windowSoftInputMode="adjustResize" >
+
         <service
             android:name=".chat.MyService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".chat.ActivityChatRoom"
@@ -51,7 +52,7 @@
             android:exported="false" />
         <activity
             android:name=".ActivityFirstLoading"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
